--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<head>
-  <title>Los Festival de 31 Minutos</title>
-</head>
+<html>
+    <head>
+    <title>Los Festival de 31 Minutos</title>
+  </head>
 
-<body>
-  kys
-</body>
+  <body>
+    kys
+  </body>
+</html>
